test/files/neg/t10700.check
t10700.scala:3: error: can't existentially abstract over parameterized type _1[_]
  def foo(b: Boolean) = if (b) new Foo[List] else new Foo[Option]
                        ^
1 error
